--- a/package.json
+++ b/package.json
@@ -7,13 +7,33 @@
     "npm": "6.14.13"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.2",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-http": "^0.3.0",
+    "passport-http-oauth": "^0.1.3",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
+    "passport-oauth": "^1.0.0",
+    "passport-openid": "^0.4.0"
   },
   "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cosy5104/newsfeed.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cosy5104/newsfeed/issues"
+  },
+  "homepage": "https://github.com/cosy5104/newsfeed#readme",
   "description": ""
 }
