--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "concurrently": "^6.2.0",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.1",
     "mongoose": "^5.13.2",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
@@ -24,7 +29,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
     "passport-oauth": "^1.0.0",
-    "passport-openid": "^0.4.0"
+    "passport-openid": "^0.4.0",
+    "stripe": "^8.171.0"
   },
   "devDependencies": {},
   "repository": {
